syntax = "proto3";

option csharp_namespace = "client";

package factorial;

service Factorial {
  rpc GetFactorial (FactorialRequest) returns (FactorialReply);
}

message FactorialRequest {
  uint32 number = 1;
}

message FactorialReply {
  uint64 result = 1;
  string message = 2;
}
